[package]
authors = [
    "Chris Fleetwood <chris@fleetwood.dev>",
]
name = "inline-wgsl"
keywords = []
edition = "2021"
repository = "https://github.com/huggingface/ratchet"

[lib]
proc-macro = true

[features]
default = []
std = []

[dependencies]
proc-macro2 = { version = "1.0", features=["span-locations"]}
quote = { version = "1.0" }
syn = { version = "2.0" }

[dev-dependencies]
wgpu = { version = "0.20" }
